{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 916,
  "lineage": "1c883226-7e1e-472d-3f9e-ae4ecf549eb3",
  "resources": [
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:security-group/sg-00dd48684132ab35a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00dd48684132ab35a",
            "ingress": [],
            "name": "blueprints-terraform-cluster-20230117084244281200000003",
            "name_prefix": "blueprints-terraform-cluster-",
            "owner_id": "532805286864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-cluster"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:security-group/sg-007b23ba35243430e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-007b23ba35243430e",
            "ingress": [],
            "name": "blueprints-terraform-node-20230117084244284400000004",
            "name_prefix": "blueprints-terraform-node-",
            "owner_id": "532805286864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-node",
              "kubernetes.io/cluster/blueprints-terraform": "owned"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-node",
              "kubernetes.io/cluster/blueprints-terraform": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-799602832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dd48684132ab35a",
            "security_group_rule_id": "sgr-05242d8793fd701c1",
            "self": false,
            "source_security_group_id": "sg-007b23ba35243430e",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-400068901",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dd48684132ab35a",
            "security_group_rule_id": "sgr-0d063ddd4d6d1c86b",
            "self": false,
            "source_security_group_id": "sg-007b23ba35243430e",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3050093769",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00dd48684132ab35a",
            "security_group_rule_id": "sgr-02596dc0bc48217f0",
            "self": false,
            "source_security_group_id": "sg-007b23ba35243430e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1336878441",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-0bec4aa08e0889613",
            "self": false,
            "source_security_group_id": "sg-00dd48684132ab35a",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3014399239",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-04529234c58e683a5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1819420697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-0f63cd6522a1c873f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-317459732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-0a4a6a0381ceae37d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1467576614",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-0bd41618577dda081",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3642684224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-01472c6458d93693c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1025525304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-0c518a22ec2d3787a",
            "self": false,
            "source_security_group_id": "sg-00dd48684132ab35a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3977258477",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-084d52952582a5697",
            "self": false,
            "source_security_group_id": "sg-00dd48684132ab35a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2545318905",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-0dff27faab19c27e0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-870963222",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-007b23ba35243430e",
            "security_group_rule_id": "sgr-0ac97a6e648690766",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:network-acl/acl-07ef40372cbbcda34",
            "default_network_acl_id": "acl-07ef40372cbbcda34",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07ef40372cbbcda34",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "532805286864",
            "subnet_ids": [
              "subnet-02e7f10665dc42ffe",
              "subnet-05c7eb6d409e0357f",
              "subnet-0722ae282e8720bae",
              "subnet-093a38b08382ee773",
              "subnet-09d78d251c7152eda",
              "subnet-0e348f0c465277e1c"
            ],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:route-table/rtb-0d250ed7746009a04",
            "default_route_table_id": "rtb-0d250ed7746009a04",
            "id": "rtb-0d250ed7746009a04",
            "owner_id": "532805286864",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:security-group/sg-03c461c4bb3c3cdd4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-03c461c4bb3c3cdd4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "532805286864",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-default"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055c2ac9579b4dc41",
            "domain": "vpc",
            "id": "eipalloc-055c2ac9579b4dc41",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-218-156.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.218.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:internet-gateway/igw-0d21e0d9fd2d8cd8c",
            "id": "igw-0d21e0d9fd2d8cd8c",
            "owner_id": "532805286864",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055c2ac9579b4dc41",
            "connectivity_type": "public",
            "id": "nat-004b6aa1c3697c289",
            "network_interface_id": "eni-002de1d45c633b781",
            "private_ip": "10.1.0.201",
            "public_ip": "3.34.218.156",
            "subnet_id": "subnet-02e7f10665dc42ffe",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-ap-northeast-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cd8e0dd10cd807051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-004b6aa1c3697c289",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd8e0dd10cd80705",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d21e0d9fd2d8cd8c",
            "id": "r-rtb-035f67404aedf91df1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035f67404aedf91df",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:route-table/rtb-0cd8e0dd10cd80705",
            "id": "rtb-0cd8e0dd10cd80705",
            "owner_id": "532805286864",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:route-table/rtb-035f67404aedf91df",
            "id": "rtb-035f67404aedf91df",
            "owner_id": "532805286864",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d94e1b5c4609aeab",
            "route_table_id": "rtb-0cd8e0dd10cd80705",
            "subnet_id": "subnet-0e348f0c465277e1c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e796a9bfb9fe69e",
            "route_table_id": "rtb-0cd8e0dd10cd80705",
            "subnet_id": "subnet-0722ae282e8720bae"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac624d8d3b2c1b34",
            "route_table_id": "rtb-0cd8e0dd10cd80705",
            "subnet_id": "subnet-05c7eb6d409e0357f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08294ffbfd07b2b9b",
            "route_table_id": "rtb-035f67404aedf91df",
            "subnet_id": "subnet-02e7f10665dc42ffe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f9a44f38522cca1",
            "route_table_id": "rtb-035f67404aedf91df",
            "subnet_id": "subnet-09d78d251c7152eda"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ac91fa17be8249c",
            "route_table_id": "rtb-035f67404aedf91df",
            "subnet_id": "subnet-093a38b08382ee773"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-0e348f0c465277e1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e348f0c465277e1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-0722ae282e8720bae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0722ae282e8720bae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-05c7eb6d409e0357f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c7eb6d409e0357f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-private-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-02e7f10665dc42ffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e7f10665dc42ffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2a",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-09d78d251c7152eda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d78d251c7152eda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2b",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:subnet/subnet-093a38b08382ee773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093a38b08382ee773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "532805286864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform-public-ap-northeast-2c",
              "kubernetes.io/cluster/blueprints-terraform": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c9d5298b9f6c6e24"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:532805286864:vpc/vpc-0c9d5298b9f6c6e24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-07ef40372cbbcda34",
            "default_route_table_id": "rtb-0d250ed7746009a04",
            "default_security_group_id": "sg-03c461c4bb3c3cdd4",
            "dhcp_options_id": "dopt-312c575a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9d5298b9f6c6e24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d250ed7746009a04",
            "owner_id": "532805286864",
            "tags": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            },
            "tags_all": {
              "Blueprint": "blueprints-terraform",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "blueprints-terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}